--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -152,3 +152,34 @@ body:before {
   background-size: cover;
 }
 */
+
+// Making the abbr element work for touchscreen, keyboard, and mouse
+// https://bitsofco.de/making-abbr-work-for-touchscreen-keyboard-mouse/
+// https://www.geeksforgeeks.org/how-to-detect-touch-screen-device-using-css/
+@media (pointer:coarse) {
+  abbr[title] {
+    /* ensure consistent styling across browsers */
+    text-decoration: underline dotted;
+  }
+
+  abbr[title]:hover::after,
+  abbr[title]:focus::after {
+    content: attr(title);
+
+    /* position tooltip like the native one */
+    position: absolute;
+    left: auto;
+    right: auto;
+    width: auto;
+    margin-top: 20px;
+    margin-left: -10px;
+
+    /* style tooltip */
+    text-align: center;
+    background-color: #1e1e1e;
+    color: #fff;
+    border-radius: 3px;
+    box-shadow: 1px 1px 5px 0 rgba(0,0,0,0.4);
+    padding: 3px 5px;
+  }
+}
